# candidate-transformer

./: .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt  run.bat  run.sh  streamlit_app.py
samples/: greenhouse_candidate.json  lever_candidate.json  sample_candidates.csv  sample_resume.txt
src/: __init__.py
src/adapters/: __init__.py  ats_json_adapter.py  base.py  csv_adapter.py  github_adapter.py  linkedin_adapter.py  recruiter_notes_adapter.py  resume_adapter.py  section_detector.py
src/engines/: __init__.py  confidence_engine.py  conflict_resolver.py  merge_engine.py
src/models/: __init__.py  canonical_candidate.py  education.py  email.py  experience.py  extracted_candidate.py  location.py  normalized_candidate.py  phone.py  profile.py  provenance.py  skill.py
src/normalizers/: __init__.py  base.py  candidate_normalizer.py
src/projection/: __init__.py  engine.py  schema_validator.py
src/provenance/: __init__.py  tracking.py
src/utils/: parser_utils.py
tests/: conftest.py
tests/adapters/: __init__.py  test_ats_json_adapter.py  test_csv_adapter.py  test_github_adapter.py  test_linkedin_adapter.py  test_recruiter_notes_adapter.py  test_resume_adapter.py  test_section_detector.py
tests/app/: test_streamlit_app.py
tests/engines/: test_merge_confidence_conflicts.py
tests/models/: __init__.py  test_models.py
tests/normalizers/: test_normalizers.py
tests/projection/: test_projection_engine.py  test_schema_validator.py
tests/provenance/: test_tracking.py
